# order-platform

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  ruff.toml
cloud/backend/: .coverage  .coveragerc  Dockerfile  Dockerfile.prod  alembic.ini  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
cloud/backend/alembic/: env.py
cloud/backend/app/: accounting_validation.py  additions.py  appliance_naming.py  article_delete_guards.py  auth_deps.py  auth_sessions.py  color_palette_config.py  csrf.py  currency.py  dashboard_summary.py  database.py  db_errors.py  edge_bundle.py  edge_operational_keys.py  edge_operational_mirror.py  edge_operational_snapshot.py  edge_reporting.py  env.py  event_bookkeeping.py  event_cash_sessions.py  event_collective_bills.py  event_config_validation.py  event_copy.py  event_sales.py  event_stats.py  event_status.py  event_transactions.py  fiscal_snapshot.py  fiscal_vat.py  hosted_pi_manager_client.py  hosted_pi_service.py  ingredient_stock.py  ingredients.py  instant_collective_bill.py  locale_format.py  main.py  models.py  onboarding_tasks.py  orderjutsu_import.py  payment_type_reference.py  (+16 more)
cloud/backend/migrations/: add_baseline_in_stock.sql  add_ingredients_stock.sql
cloud/backend/scripts/: export_openapi.py
cloud/backend/tests/: conftest.py  helpers.py  test_accounting_accounts_api.py  test_additions.py  test_appliance_lending.py  test_appliance_pairing.py  test_articles_api.py  test_auth_session_lifecycle.py  test_backfill_user_home_verleiher.py  test_bluetooth_printing_enabled.py  test_cash_drawer_config.py  test_collective_bill_pdf.py  test_collective_bills.py  test_color_palette.py  test_db_errors.py  (+62 more)
cloud/hosted-pi-manager/: Dockerfile  pyproject.toml
pi/backend/: .coverage  .coveragerc  Dockerfile  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.db
(+1062 files in other folders)
