[project]
name = "vendiqo-cloud-backend"
version = "0.0.0"
description = "Vendiqo cloud backend (FastAPI + PostgreSQL)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "gunicorn",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pwdlib[argon2,bcrypt]",
    "python-jose[cryptography]",
    "email-validator",
    "python-multipart",
    "slowapi",
    "stripe",
    "httpx>=0.28.1,<1",
    "fpdf2>=2.8.7,<3",
    "Pillow>=12.3.0,<13",
    "Babel>=2.18.0,<3",
    "pypdf>=6.14.2,<7",
    "vendiqo-shared",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1.0,<8",
    "httpx2>=2.7.0",
]

[tool.uv]
package = false

[tool.uv.sources]
vendiqo-shared = { path = "../../packages/vendiqo_shared", editable = true }
