[project]
name = "vendiqo-hosted-pi-manager"
version = "0.0.0"
description = "Manages hosted Pi edge stacks (Docker) for the Vendiqo cloud"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
