[project]
name = "vendiqo-pi-backend"
version = "0.0.0"
description = "Vendiqo Pi edge backend (FastAPI + SQLite)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "httpx>=0.28.1,<1",
    "python-multipart",
    "pwdlib[argon2,bcrypt]",
    "python-escpos>=3.1",
    "Pillow>=12.3.0",
    "vendiqo-shared",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1.0,<8",
    "httpx2>=2.9.1",
]

[tool.uv]
package = false

[tool.uv.sources]
vendiqo-shared = { path = "../../packages/vendiqo_shared", editable = true }
